src/test/resources/semantic/reject/lessThanInvalidTypesPrimitive1.ul
void main() {
}

void foo() {
    boolean result;
    result = 1 < "1";
}
